# keypath-recorder

./: .gitignore  AUTONOMY_GUIDE.md  Cargo.toml  PRIVILEGED_HELPER_PLAN.md  README.md  TEST_PLAN.md  ir_design_doc.toml  ir_schema.json  keypath_bridge.h  plan.md  run_app.sh  test.sh
.github/workflows/: ci.yml
KeypathRecorder/: .gitignore  Info.plist  Package.swift  README.md  build_app_bundle.sh  notarize_app.sh  setup_notarization.sh
KeypathRecorder.app/Contents/: Info.plist
KeypathRecorder.app/Contents/MacOS/: KeypathRecorder
KeypathRecorder/Resources/: KanataHelper.entitlements  KeypathRecorder.entitlements  com.keypath.kanata.helper.plist
KeypathRecorder/Sources/KanataHelper/: KanataHelperDelegate.swift  KanataHelperTool.swift  main.swift
KeypathRecorder/Sources/KeypathRecorder/: ContentView.swift  HelperManager.swift  HelperSettingsView.swift  KanataHelperProtocol.swift  KeyboardCapture.swift  KeypathRecorderApp.swift  Logger.swift  RustBridge.swift
KeypathRecorder/Tests/KeypathRecorderTests/: KeypathRecorderTests.swift
PrivilegedHelperPOC/: DEBUG.md  LAUNCHCTL_FAILURE_REPORT.md  README.md  SENIOR_DEVELOPER_CONSULTATION.md
keypath_cli/: Cargo.toml
keypath_cli/src/: main.rs
keypath_core/: Cargo.toml
keypath_core/src/: bridge.rs  export.rs  integration_tests.rs  ir.rs  lib.rs  schema.rs  validation.rs
samples/: dual.json  dual.kbd  macros.json  macros.kbd  simple.json  simple.kbd
