[workspace]
members = ["keypath_core", "keypath_cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Micah Alpern <micah@example.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/malpern/keypath-recorder"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
schemars = "0.8"
pretty_assertions = "1.4"