[package]
name = "keypath_cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "keypath_cli"
path = "src/main.rs"

[dependencies]
keypath_core = { path = "../keypath_core" }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true