[package]
name = "keypath_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
schemars.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true